--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "otplib": "^13.2.0",
     "pg": "^8.17.2",
     "zodex": "^4.0.1"
   },
