--- a/api/package.json
+++ b/api/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "yarn test:docker",
     "test:docker": "TEST_COMMAND=\"npm ci && npm run migrate:apply && npm run test:integration\" docker compose -f docker-compose.test.yml up --abort-on-container-exit --remove-orphans",
-    "test:integration": "vitest run routes/v1/auth/__tests__/auth.integration.test.js && vitest run routes/v1/auth/__tests__/entitlements.integration.test.js && vitest run routes/v1/users/invitations/__tests__/invitations.integration.test.js && vitest run routes/v1/entitlements/__tests__/entitlements.integration.test.js",
+    "test:integration": "vitest run routes/v1/auth/__tests__/auth.integration.test.js && vitest run routes/v1/auth/__tests__/entitlements.integration.test.js && vitest run routes/v1/users/invitations/__tests__/invitations.integration.test.js && vitest run routes/v1/entitlements/__tests__/entitlements.integration.test.js && vitest run routes/v1/users/__tests__/users.integration.test.js",
     "test:coverage": "yarn coverage",
-    "test:coverage:inner": "vitest run routes/v1/auth/__tests__/auth.integration.test.js routes/v1/auth/__tests__/entitlements.integration.test.js routes/v1/users/invitations/__tests__/invitations.integration.test.js routes/v1/entitlements/__tests__/entitlements.integration.test.js --coverage",
+    "test:coverage:inner": "vitest run routes/v1/auth/__tests__/auth.integration.test.js routes/v1/auth/__tests__/entitlements.integration.test.js routes/v1/users/invitations/__tests__/invitations.integration.test.js routes/v1/entitlements/__tests__/entitlements.integration.test.js routes/v1/users/__tests__/users.integration.test.js --coverage",
     "start": "yarn index.js",
     "dev": "nodemon index.js",
     "migrate": "npx drizzle-kit generate && npx drizzle-kit migrate",
